[gd_scene load_steps=3 format=3 uid="uid://cvfsj357ca8k6"]

[ext_resource type="Script" uid="uid://c0xc6echi2ss5" path="res://codigo/zona_de_muerte.gd" id="1_waj8f"]
[ext_resource type="AudioStream" uid="uid://bxo27jsocqe80" path="res://recursos/sounds/hurt.wav" id="2_6qimd"]

[node name="ZonaDeMuerte" type="Area2D"]
collision_mask = 2
script = ExtResource("1_waj8f")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="SonidoMuerte" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_6qimd")
bus = &"Efectos de Sonido"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
